[package]
name = "libp2p"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]

[dependencies]
libp2p-identity = { path = "../libp2p-identity-rs" }
libp2p-secio = { path = "../libp2p-secio-rs" }
maddr = "0.2.0"
mhash = { version = "0.2.0", features = ["generation", "validation", "sha2"] }
multistream = { path = "../multistream-rs" }
msgio = { path = "../msgio-rs" }
openssl = "*"
