[package]
authors = ["Wim Looman <wim@nemo157.com>"]
name = "libp2p"
version = "0.1.0"

[dependencies]
bytes = "0.4.4"
maddr = "0.2.0"
protobuf = "1.4.1"
slice_as_array = "1.1.0"
tokio-core = "0.1.8"
tokio-io = "0.1.2"

[dependencies.futures-await]
git = "https://github.com/alexcrichton/futures-await"
optional = false

[dependencies.libp2p-identity]
path = "../libp2p-identity-rs"

[dependencies.libp2p-secio]
path = "../libp2p-secio-rs"

[dependencies.mplex]
path = "../mplex-rs"

[dependencies.msgio]
path = "../msgio-rs"

[dependencies.multistream]
path = "../multistream-rs"
